some submodule adjustments

--- a/paper.tex
+++ b/paper.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper]{article}
+% \documentclass[runningheads]{include/llncs/llncs} %%% LLNCS
 
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
@@ -16,8 +17,18 @@
 
 \author{%
   Author\\
-  University of Potsdam, Germany
+  University of Klagenfurt, Austria
+%   Graz University of Technology, Austria
+%   University of Potsdam, Germany
 }
+
+% \author{Author1\inst{1} \and Author2\inst{2,3}} %%% LLNCS
+
+% \authorrunning{Author} %%% LLNCS
+
+% \institute{University of Klagenfurt, Austria \and
+%            Graz University of Technology, Austria \and
+%            University of Potsdam, Germany} %%% LLNCS
 
 \maketitle
 
@@ -27,6 +38,7 @@
 \input{approach}
 \input{discussion}
 
+% \bibliographystyle{include/llncs/splncs04} %%% LLNCS
 \printbibliography{}
 
 \end{document}
